// Vitest Snapshot v1

exports[`calculate simulations-salarié > ATMP 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2312
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > ATMP 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2254
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > ATMP 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2268
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > JEI 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3443
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > JEI 2`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 26483
salarié . rémunération . net . payé après impôt: 10855
salarié . rémunération . net . à payer avant impôt: 15995
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > activité partielle 1`] = `
"salarié . contrat . salaire brut: 1560
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 136
salarié . rémunération . net . payé après impôt: 1361
salarié . rémunération . net . à payer avant impôt: 1361
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > activité partielle 2`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 980
salarié . rémunération . net . payé après impôt: 2118
salarié . rémunération . net . à payer avant impôt: 2242"
`;

exports[`calculate simulations-salarié > activité partielle 3`] = `
"salarié . contrat . salaire brut: 8000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1990
salarié . rémunération . net . payé après impôt: 3765
salarié . rémunération . net . à payer avant impôt: 4484"
`;

exports[`calculate simulations-salarié > activité partielle 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1614
salarié . rémunération . net . payé après impôt: 2218
salarié . rémunération . net . à payer avant impôt: 2406"
`;

exports[`calculate simulations-salarié > activité partielle 5`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2780
salarié . rémunération . net . payé après impôt: 2407
salarié . rémunération . net . à payer avant impôt: 2684"
`;

exports[`calculate simulations-salarié > activité partielle 6`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: 3750
salarié . coût total employeur: 740
salarié . rémunération . net . payé après impôt: 1696
salarié . rémunération . net . à payer avant impôt: 1747"
`;

exports[`calculate simulations-salarié > activité partielle 7`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 980
salarié . rémunération . net . payé après impôt: 2206
salarié . rémunération . net . à payer avant impôt: 2242"
`;

exports[`calculate simulations-salarié > aides 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2302
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > aides 2`] = `
"salarié . contrat . salaire brut: 10000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12817
salarié . rémunération . net . payé après impôt: 7714
salarié . rémunération . net . à payer avant impôt: 8925
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > aides 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1463
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > aides 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2278
salarié . rémunération . net . payé après impôt: 1667
salarié . rémunération . net . à payer avant impôt: 1720
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > apprentissage 1`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1047
salarié . rémunération . net . payé après impôt: 1466
salarié . rémunération . net . à payer avant impôt: 1466
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > apprentissage 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3207
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > atmp 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2352
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > avantages 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2484
salarié . rémunération . net . payé après impôt: 1490
salarié . rémunération . net . à payer avant impôt: 1540"
`;

exports[`calculate simulations-salarié > avantages 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2494
salarié . rémunération . net . payé après impôt: 1489
salarié . rémunération . net . à payer avant impôt: 1539"
`;

exports[`calculate simulations-salarié > avantages 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2407
salarié . rémunération . net . payé après impôt: 1514
salarié . rémunération . net . à payer avant impôt: 1549"
`;

exports[`calculate simulations-salarié > cadre 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4116
salarié . rémunération . net . payé après impôt: 2160
salarié . rémunération . net . à payer avant impôt: 2348"
`;

exports[`calculate simulations-salarié > cadre 2`] = `
"salarié . contrat . salaire brut: 8000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 11561
salarié . rémunération . net . payé après impôt: 4998
salarié . rémunération . net . à payer avant impôt: 6247"
`;

exports[`calculate simulations-salarié > cdd 1`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3111
salarié . rémunération . net . payé après impôt: 1815
salarié . rémunération . net . à payer avant impôt: 1894
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 2`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3386
salarié . rémunération . net . payé après impôt: 1897
salarié . rémunération . net . à payer avant impôt: 2009
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 3`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3673
salarié . rémunération . net . payé après impôt: 2084
salarié . rémunération . net . à payer avant impôt: 2197
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 4`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4406
salarié . rémunération . net . payé après impôt: 2185
salarié . rémunération . net . à payer avant impôt: 2375
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 5`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3631
salarié . rémunération . net . payé après impôt: 1792
salarié . rémunération . net . à payer avant impôt: 1871
Notifications affichées : salarié . contrat . CDD . information, salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > contrat pro 1`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1566
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165"
`;

exports[`calculate simulations-salarié > contrat pro 2`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1566
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165"
`;

exports[`calculate simulations-salarié > effectif 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2296
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2307
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2318
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2318
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > frais pro - DFS 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2067
salarié . rémunération . net . payé après impôt: 1615
salarié . rémunération . net . à payer avant impôt: 1615"
`;

exports[`calculate simulations-salarié > frais pro - DFS 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2120
salarié . rémunération . net . payé après impôt: 1549
salarié . rémunération . net . à payer avant impôt: 1584"
`;

exports[`calculate simulations-salarié > frais pro - DFS 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2081
salarié . rémunération . net . payé après impôt: 1555
salarié . rémunération . net . à payer avant impôt: 1590"
`;

exports[`calculate simulations-salarié > frais pro - DFS 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2081
salarié . rémunération . net . payé après impôt: 1555
salarié . rémunération . net . à payer avant impôt: 1590"
`;

exports[`calculate simulations-salarié > frais pro - DFS 5`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2296
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > frais pro - DFS 6`] = `
"salarié . contrat . salaire brut: 1700
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1767
salarié . rémunération . net . payé après impôt: 1344
salarié . rémunération . net . à payer avant impôt: 1344
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > frais pro - DFS 7`] = `
"salarié . contrat . salaire brut: 2600
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3145
salarié . rémunération . net . payé après impôt: 2105
salarié . rémunération . net . à payer avant impôt: 2125"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4381
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4996
salarié . rémunération . net . payé après impôt: 2628
salarié . rémunération . net . à payer avant impôt: 2924"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4687
salarié . rémunération . net . payé après impôt: 2637
salarié . rémunération . net . à payer avant impôt: 2836"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4380
salarié . rémunération . net . payé après impôt: 2354
salarié . rémunération . net . à payer avant impôt: 2551"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5090
salarié . rémunération . net . payé après impôt: 3064
salarié . rémunération . net . à payer avant impôt: 3261"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4380
salarié . rémunération . net . payé après impôt: 2354
salarié . rémunération . net . à payer avant impôt: 2551"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 4`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4356
salarié . rémunération . net . payé après impôt: 2330
salarié . rémunération . net . à payer avant impôt: 2527"
`;

exports[`calculate simulations-salarié > frais pro - outre-mer 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4117
salarié . rémunération . net . payé après impôt: 2479
salarié . rémunération . net . à payer avant impôt: 2586"
`;

exports[`calculate simulations-salarié > frais pro - outre-mer 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4131
salarié . rémunération . net . payé après impôt: 2475
salarié . rémunération . net . à payer avant impôt: 2583"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2336
salarié . rémunération . net . payé après impôt: 1487
salarié . rémunération . net . à payer avant impôt: 1521"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 2`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4298
salarié . rémunération . net . payé après impôt: 1946
salarié . rémunération . net . à payer avant impôt: 2136"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2380
salarié . rémunération . net . payé après impôt: 1458
salarié . rémunération . net . à payer avant impôt: 1493"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4381
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4381
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4994
salarié . rémunération . net . payé après impôt: 2624
salarié . rémunération . net . à payer avant impôt: 2919"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 4`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4381
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 5`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4356
salarié . rémunération . net . payé après impôt: 2331
salarié . rémunération . net . à payer avant impôt: 2528"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 6`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4151
salarié . rémunération . net . payé après impôt: 2497
salarié . rémunération . net . à payer avant impôt: 2606"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2395
salarié . rémunération . net . payé après impôt: 1601
salarié . rémunération . net . à payer avant impôt: 1636"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2355
salarié . rémunération . net . payé après impôt: 1572
salarié . rémunération . net . à payer avant impôt: 1606"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2423
salarié . rémunération . net . payé après impôt: 1601
salarié . rémunération . net . à payer avant impôt: 1636"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2394
salarié . rémunération . net . payé après impôt: 1581
salarié . rémunération . net . à payer avant impôt: 1616
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 5`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2362
salarié . rémunération . net . payé après impôt: 1555
salarié . rémunération . net . à payer avant impôt: 1589
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 6`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2344
salarié . rémunération . net . payé après impôt: 1566
salarié . rémunération . net . à payer avant impôt: 1601
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 7`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2917
salarié . coût total employeur: 3330
salarié . rémunération . net . payé après impôt: 1898
salarié . rémunération . net . à payer avant impôt: 1919
Notifications affichées : salarié . temps de travail . heures complémentaires . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 8`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2692
salarié . coût total employeur: 3263
salarié . rémunération . net . payé après impôt: 1856
salarié . rémunération . net . à payer avant impôt: 1889
Notifications affichées : salarié . temps de travail . heures complémentaires . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2284
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 2`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 4`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 1950
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 5`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2206
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 6`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12885
salarié . rémunération . net . payé après impôt: 6224
salarié . rémunération . net . à payer avant impôt: 7166"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 7`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12885
salarié . rémunération . net . payé après impôt: 6725
salarié . rémunération . net . à payer avant impôt: 7166"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 8`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12885
salarié . rémunération . net . payé après impôt: 6928
salarié . rémunération . net . à payer avant impôt: 7166"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 9`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2212
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 10`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 11`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28380
salarié . rémunération . net . payé après impôt: 12958
salarié . rémunération . net . à payer avant impôt: 15995
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 12`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28380
salarié . rémunération . net . payé après impôt: 11185
salarié . rémunération . net . à payer avant impôt: 15995
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 2`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42152
salarié . rémunération . net . payé après impôt: 14593
salarié . rémunération . net . à payer avant impôt: 24079
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4508
salarié . rémunération . net . payé après impôt: 2392
salarié . rémunération . net . à payer avant impôt: 2590
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 4`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3680
salarié . rémunération . net . payé après impôt: 2252
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 5`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42152
salarié . rémunération . net . payé après impôt: 14593
salarié . rémunération . net . à payer avant impôt: 24079
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 6`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2517
salarié . rémunération . net . à payer avant impôt: 2626"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 7`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42152
salarié . rémunération . net . payé après impôt: 16562
salarié . rémunération . net . à payer avant impôt: 26817
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 8`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2107
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > inversions 1`] = `
"salarié . contrat . salaire brut: 1843
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1417
salarié . rémunération . net . à payer avant impôt: 1437"
`;

exports[`calculate simulations-salarié > inversions 2`] = `
"salarié . contrat . salaire brut: 2554
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3339
salarié . rémunération . net . payé après impôt: 1889
salarié . rémunération . net . à payer avant impôt: 2000"
`;

exports[`calculate simulations-salarié > inversions 3`] = `
"salarié . contrat . salaire brut: 2703
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3619
salarié . rémunération . net . payé après impôt: 2000
salarié . rémunération . net . à payer avant impôt: 2117"
`;

exports[`calculate simulations-salarié > lodeom 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1521
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3680
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5428
salarié . rémunération . net . payé après impôt: 2758
salarié . rémunération . net . à payer avant impôt: 3148"
`;

exports[`calculate simulations-salarié > lodeom 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7784
salarié . rémunération . net . payé après impôt: 3638
salarié . rémunération . net . à payer avant impôt: 4354"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1521
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3000
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4773
salarié . rémunération . net . payé après impôt: 2758
salarié . rémunération . net . à payer avant impôt: 3148"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7784
salarié . rémunération . net . payé après impôt: 3638
salarié . rémunération . net . à payer avant impôt: 4354"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1521
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3000
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4279
salarié . rémunération . net . payé après impôt: 2758
salarié . rémunération . net . à payer avant impôt: 3148"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7387
salarié . rémunération . net . payé après impôt: 3638
salarié . rémunération . net . à payer avant impôt: 4354"
`;

exports[`calculate simulations-salarié > stage 1`] = `
"salarié . contrat . salaire brut: 500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 500
salarié . rémunération . net . payé après impôt: 500
salarié . rémunération . net . à payer avant impôt: 500
Notifications affichées : salarié . contrat . stage . avertissement, salarié . contrat . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié > stage 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2472
salarié . rémunération . net . payé après impôt: 1756
salarié . rémunération . net . à payer avant impôt: 1756
Notifications affichées : salarié . contrat . stage . avertissement"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1601
salarié . rémunération . net . payé après impôt: 1195
salarié . rémunération . net . à payer avant impôt: 1195
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3259
salarié . rémunération . net . payé après impôt: 1869
salarié . rémunération . net . à payer avant impôt: 1979"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 3`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1587
salarié . rémunération . net . payé après impôt: 1170
salarié . rémunération . net . à payer avant impôt: 1170
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 4`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3222
salarié . rémunération . net . payé après impôt: 1854
salarié . rémunération . net . à payer avant impôt: 1938"
`;

exports[`calculate simulations-salarié > temps partiel 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2188
salarié . coût total employeur: 2424
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > temps partiel 2`] = `
"salarié . contrat . salaire brut: 1857
salarié . contrat . salaire brut . équivalent temps plein: 2500
salarié . coût total employeur: 2410
salarié . rémunération . net . payé après impôt: 1428
salarié . rémunération . net . à payer avant impôt: 1448"
`;

exports[`calculate simulations-salarié > temps partiel 3`] = `
"salarié . contrat . salaire brut: 1000
salarié . contrat . salaire brut . équivalent temps plein: 1750
salarié . coût total employeur: 1052
salarié . rémunération . net . payé après impôt: 770
salarié . rémunération . net . à payer avant impôt: 770
Notifications affichées : salarié . contrat . temps de travail . temps partiel . contrôle temps min"
`;

exports[`calculate simulations-salarié > treizième mois 1`] = `
"salarié . contrat . salaire brut: 2300
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3222
salarié . rémunération . net . payé après impôt: 1842
salarié . rémunération . net . à payer avant impôt: 1950"
`;

exports[`calculate simulations-salarié > treizième mois 2`] = `
"salarié . contrat . salaire brut: 2300
salarié . contrat . salaire brut . équivalent temps plein: 3096
salarié . coût total employeur: 3768
salarié . rémunération . net . payé après impôt: 2062
salarié . rémunération . net . à payer avant impôt: 2176"
`;

exports[`calculate simulations-salarié > échelle de salaires 1`] = `
"salarié . contrat . salaire brut: 100
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 123
salarié . rémunération . net . payé après impôt: 57
salarié . rémunération . net . à payer avant impôt: 57
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 2`] = `
"salarié . contrat . salaire brut: 250
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 278
salarié . rémunération . net . payé après impôt: 176
salarié . rémunération . net . à payer avant impôt: 176
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 3`] = `
"salarié . contrat . salaire brut: 500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 535
salarié . rémunération . net . payé après impôt: 374
salarié . rémunération . net . à payer avant impôt: 374
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 4`] = `
"salarié . contrat . salaire brut: 750
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 793
salarié . rémunération . net . payé après impôt: 572
salarié . rémunération . net . à payer avant impôt: 572
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 5`] = `
"salarié . contrat . salaire brut: 1000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1050
salarié . rémunération . net . payé après impôt: 770
salarié . rémunération . net . à payer avant impôt: 770
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 6`] = `
"salarié . contrat . salaire brut: 1250
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1308
salarié . rémunération . net . payé après impôt: 968
salarié . rémunération . net . à payer avant impôt: 968
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 7`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1566
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 8`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2296
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > échelle de salaires 9`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3237
salarié . rémunération . net . payé après impôt: 1848
salarié . rémunération . net . à payer avant impôt: 1957"
`;

exports[`calculate simulations-salarié > échelle de salaires 10`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > échelle de salaires 11`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5428
salarié . rémunération . net . payé après impôt: 2758
salarié . rémunération . net . à payer avant impôt: 3148"
`;

exports[`calculate simulations-salarié > échelle de salaires 12`] = `
"salarié . contrat . salaire brut: 5000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7079
salarié . rémunération . net . payé après impôt: 3384
salarié . rémunération . net . à payer avant impôt: 3952"
`;

exports[`calculate simulations-salarié > échelle de salaires 13`] = `
"salarié . contrat . salaire brut: 10000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 14314
salarié . rémunération . net . payé après impôt: 6170
salarié . rémunération . net . à payer avant impôt: 7969
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 14`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28380
salarié . rémunération . net . payé après impôt: 10855
salarié . rémunération . net . à payer avant impôt: 15995
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 15`] = `
"salarié . contrat . salaire brut: 100000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 128900
salarié . rémunération . net . payé après impôt: 46358
salarié . rémunération . net . à payer avant impôt: 87009
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 16`] = `
"salarié . contrat . salaire brut: 1000000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1244234
salarié . rémunération . net . payé après impôt: 446210
salarié . rémunération . net . à payer avant impôt: 896109
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;
